# whisper_finetune

./: .gitignore  LICENSE  dataset.csv  pyproject.toml  requirements.txt
q1_whisper_finetune/: 01_preprocess.py  02_finetune.py  03_evaluate.py  04_error_analysis.py  05_fix_implementation.py
q1_whisper_finetune/results/: error_analysis.json  fix_results.txt  fleurs_evaluation.csv  sampled_errors.csv  wer_summary.csv
q2_asr_cleanup/: generate_raw_asr.py  pipeline.py  raw_asr_manifest.csv
q2_asr_cleanup/english_detection/: detector.py  script_utils.py
q2_asr_cleanup/number_normalization/: edge_cases.py  normalizer.py
q2_asr_cleanup/results/: pipeline_output.csv
q3_spell_check/: low_confidence_review.py  spell_checker.py
q3_spell_check/results/: final_word_labels.csv  low_confidence_review.csv  spell_check_results.csv
q4_lattice_wer/: demo.py  lattice_builder.py  lattice_wer.py  q4_results.txt
shared/: data_loader.py  utils.py
