[project]
name = "whisper-finetune"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.8.4",
    "editdistance>=0.8.1",
    "evaluate>=0.4.6",
    "ffmpeg-python>=0.2.0",
    "huggingface-hub>=1.7.2",
    "indic-nlp-library>=0.92",
    "indic-transliteration>=2.3.79",
    "jiwer>=4.0.0",
    "librosa>=0.11.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pydub>=0.25.1",
    "pyenchant>=3.3.0",
    "python-levenshtein>=0.27.3",
    "rapidfuzz>=3.14.3",
    "regex>=2026.2.28",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "soundfile>=0.13.1",
    "tensorboard>=2.20.0",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
    "tqdm>=4.67.3",
    "transformers>=5.3.0",
    "unicodedata2>=17.0.1",
]
